Add authentication middleware with jwt and Add user get and update endpoint and fix bug in get claims function
