# src/api/swagger.json
@@ -13,6 +13,73 @@
     "host": "localhost:8000",
     "basePath": "/api/v1/",
     "paths": {
+        "/user/": {
+            "get": {
+                "description": "Retrieve user information by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get User",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/responses.UserResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Error",
+                        "schema": {
+                            "$ref": "#/definitions/responses.InterServerErrorResponse"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update user information by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get User",
+                "parameters": [
+                    {
+                        "description": "upadte user body",
+                        "name": "Request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_iarsham_shop-api_internal_dto.UpdateUserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/responses.UserResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Error",
+                        "schema": {
+                            "$ref": "#/definitions/responses.InterServerErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/user/register": {
             "post": {
                 "description": "Create user with firstname / lastname / phone",
@@ -33,7 +100,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.RegisterRequest"
+                            "$ref": "#/definitions/github_com_iarsham_shop-api_internal_dto.RegisterRequest"
                         }
                     }
                 ],
@@ -79,7 +146,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.SendOTPRequest"
+                            "$ref": "#/definitions/github_com_iarsham_shop-api_internal_dto.SendOTPRequest"
                         }
                     }
                 ],
@@ -119,7 +186,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.VerifyOTPRequest"
+                            "$ref": "#/definitions/github_com_iarsham_shop-api_internal_dto.VerifyOTPRequest"
                         }
                     }
                 ],
@@ -147,7 +214,7 @@
         }
     },
     "definitions": {
-        "dto.RegisterRequest": {
+        "github_com_iarsham_shop-api_internal_dto.RegisterRequest": {
             "type": "object",
             "required": [
                 "first_name",
@@ -175,7 +242,7 @@
                 }
             }
         },
-        "dto.SendOTPRequest": {
+        "github_com_iarsham_shop-api_internal_dto.SendOTPRequest": {
             "type": "object",
             "required": [
                 "phone"
@@ -189,7 +256,28 @@
                 }
             }
         },
-        "dto.VerifyOTPRequest": {
+        "github_com_iarsham_shop-api_internal_dto.UpdateUserRequest": {
+            "type": "object",
+            "required": [
+                "first_name",
+                "last_name"
+            ],
+            "properties": {
+                "first_name": {
+                    "type": "string",
+                    "maxLength": 75,
+                    "minLength": 1,
+                    "example": "James"
+                },
+                "last_name": {
+                    "type": "string",
+                    "maxLength": 75,
+                    "minLength": 1,
+                    "example": "Rodriguez"
+                }
+            }
+        },
+        "github_com_iarsham_shop-api_internal_dto.VerifyOTPRequest": {
             "type": "object",
             "required": [
                 "code",
@@ -207,6 +295,18 @@
                     "maxLength": 13,
                     "minLength": 11,
                     "example": "+989021112299"
+                }
+            }
+        },
+        "gorm.DeletedAt": {
+            "type": "object",
+            "properties": {
+                "time": {
+                    "type": "string"
+                },
+                "valid": {
+                    "description": "Valid is true if Time is not NULL",
+                    "type": "boolean"
                 }
             }
         },
@@ -270,6 +370,35 @@
                 "response": {
                     "type": "string",
                     "example": "user not found"
+                }
+            }
+        },
+        "responses.UserResponse": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "firstName": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "isActive": {
+                    "type": "boolean"
+                },
+                "lastName": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
                 }
             }
         },
